crates/tui/tests/storybook/snapshots/app_dialog_command::rewind_dialog.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---

 write the parser



 add the renderer

─ rewind ───────────────────────────────────────────────────
  1. write the parser
  2. add the renderer
  3. wire up the CLI flag
  4. (current)



 ○ normal                                           4:1 100%
