crates/tui/tests/storybook/snapshots/app_dialog_command::settings_picker.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 70 16
  5  24   2 attrs=dim
  6  24   2 attrs=dim
  7  24   2 attrs=dim
  8  24   2 attrs=dim
  9  24   2 attrs=dim
 10  24   2 attrs=dim
 11   0  24 bg=AnsiValue(237)
 11  24   3 bg=AnsiValue(237) attrs=dim
 11  27  43 bg=AnsiValue(237)
 12   0  67 fg=AnsiValue(237)
 12  67   1 fg=AnsiValue(244)
 12  69   1 fg=AnsiValue(237)
 13   1   1 fg=Black bg=White
 14   0  70 fg=AnsiValue(237)
 15   0  70 bg=AnsiValue(233)
