crates/tui/tests/storybook/snapshots/app_dialog_command::stats_dialog.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---







  tip ctrl+enter, steer the current response without waiting for it…
─ stats ──────────────────────────────────────────────────────────────
 No metrics recorded yet.

 ○ normal                                                     1:1 100%
