crates/tui/tests/storybook/snapshots/app_dialog_permission::ask_user_question_permission_dialog.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
* ask_user_question 1 question












──────────────────────────────────────────────────────────────────────
 ask_user_question: 1 question

 Allow?
  1. allow once
  2. deny
  3. allow ask_user_question for this session
  4. allow ask_user_question in ~/cwd

  press tab to add a reason…
 ○ normal  permission pending                                   1:1 0%
