crates/tui/tests/storybook/snapshots/app_dialog_permission::ask_user_question_permission_dialog.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 581
expression: frame.styles_text()
---
dim: 70 24
  0   0   1 fg=AnsiValue(208)
  0   1  18 attrs=dim
 13   0  70 fg=AnsiValue(208)
 14   1  17 fg=AnsiValue(208)
 16   1   6 attrs=dim
 17   0   1 bg=AnsiValue(237)
 17   1   1 fg=Black bg=White
 17   2   3 bg=AnsiValue(237) attrs=dim
 17   5  10 fg=AnsiValue(208) bg=AnsiValue(237)
 17  15  55 bg=AnsiValue(237)
 18   1   4 attrs=dim
 19   1   4 attrs=dim
 20   1   4 attrs=dim
 22   2  26 attrs=dim
 23   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 23  10   1 bg=AnsiValue(233)
 23  11  18 fg=AnsiValue(208) bg=AnsiValue(233) attrs=bold
 23  29  35 bg=AnsiValue(233)
 23  64   6 fg=AnsiValue(244) bg=AnsiValue(233)
