crates/tui/tests/storybook/snapshots/app_dialog_permission::bash_long_command_summary_wraps.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
* bash ls -ld /Users/leo/.dotfiles; realpath /Users/leo/.dotfiles
  2>/dev/null || true; cd
  /Users/leo/dev/rust/smelt/.worktrees/fix-path-parsing && cargo
  test -p smelt-core permissions::tests




──────────────────────────────────────────────────────────────────────
 bash: ls -ld /Users/leo/.dotfiles; realpath /Users/leo/.dotfiles
       2>/dev/null || true; cd
       /Users/leo/dev/rust/smelt/.worktrees/fix-path-parsing &&
       cargo test -p smelt-core permissions::tests

 Allow?
  1. allow once
  2. deny
  3. allow ls * for this session
  4. allow ls * in ~/cwd

  press tab to add a reason…
 ○ normal  permission pending                                   1:1 0%
