crates/tui/tests/storybook/snapshots/app_dialog_permission::bash_long_command_summary_wraps.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 70 22
  0   0   1 fg=AnsiValue(208)
  0   1   5 attrs=dim
  0   7   2 fg=Rgb { r: 255, g: 255, b: 255 }
  0   9   4 fg=Rgb { r: 253, g: 151, b: 31 }
  0  13  21 fg=Rgb { r: 255, g: 255, b: 255 }
  0  34   1 fg=Rgb { r: 249, g: 38, b: 114 }
  0  35  31 fg=Rgb { r: 255, g: 255, b: 255 }
  1   0   2 attrs=dim
  1   2   1 fg=Rgb { r: 190, g: 132, b: 255 }
  1   3   1 fg=Rgb { r: 249, g: 38, b: 114 }
  1   4  10 fg=Rgb { r: 255, g: 255, b: 255 }
  1  14   2 fg=Rgb { r: 249, g: 38, b: 114 }
  1  16   5 fg=Rgb { r: 255, g: 255, b: 255 }
  1  21   1 fg=Rgb { r: 249, g: 38, b: 114 }
  1  22   1 fg=Rgb { r: 255, g: 255, b: 255 }
  1  23   2 fg=Rgb { r: 102, g: 217, b: 239 }
  1  25   1 fg=Rgb { r: 255, g: 255, b: 255 }
  2   0   2 attrs=dim
  2   2  54 fg=Rgb { r: 255, g: 255, b: 255 }
  2  56   2 fg=Rgb { r: 249, g: 38, b: 114 }
  2  58   7 fg=Rgb { r: 255, g: 255, b: 255 }
  3   0   2 attrs=dim
  3   2   4 fg=Rgb { r: 255, g: 255, b: 255 }
  3   6   3 fg=Rgb { r: 253, g: 151, b: 31 }
  3   9  30 fg=Rgb { r: 255, g: 255, b: 255 }
  8   0  70 fg=AnsiValue(208)
  9   1   4 fg=AnsiValue(208)
 14   1   6 attrs=dim
 15   0   1 bg=AnsiValue(237)
 15   1   1 fg=Black bg=White
 15   2   3 bg=AnsiValue(237) attrs=dim
 15   5  10 fg=AnsiValue(208) bg=AnsiValue(237)
 15  15  55 bg=AnsiValue(237)
 16   1   4 attrs=dim
 17   1   4 attrs=dim
 18   1   4 attrs=dim
 20   2  26 attrs=dim
 21   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 21  10   1 bg=AnsiValue(233)
 21  11  18 fg=AnsiValue(208) bg=AnsiValue(233) attrs=bold
 21  29  35 bg=AnsiValue(233)
 21  64   6 fg=AnsiValue(244) bg=AnsiValue(233)
